# otter_usv_detector

./: .gitignore  README.md
dataset_acquisition/: .gitignore  CMakeLists.txt  README.md  package.xml
dataset_acquisition/config/: collection_params.yaml  collection_params_gimbal.yaml  lighting_params.yaml
dataset_acquisition/launch/: data_collection.launch  data_collection_gimbal.launch
dataset_acquisition/scripts/: annotator.py  collect_dataset.py  collect_dataset_gimbal.py  verify_dataset.py
dataset_acquisition/urdf/: overhead_camera.urdf.xacro  x500_visual.urdf.xacro
dataset_acquisition/worlds/: open_water.world  usv_uav_collect.world
otter_usv_detector/: CMakeLists.txt  README.md  package.xml
otter_usv_detector/config/: detector.yaml  test_grid.yaml
otter_usv_detector/launch/: aruco_pose_test.launch  collect_test_samples.launch  detector.launch  eval_aruco_estimator.launch  eval_pos_estimator.launch  pose_validation.launch  test_image.launch
otter_usv_detector/models/: .gitignore  validation_platform.sdf
otter_usv_detector/msg/: ObbDetection.msg  ObbDetectionArray.msg
otter_usv_detector/scripts/: aruco_pose_estimator_node.py  aruco_pose_test_node.py  collect_test_samples.py  detector_node.py  eval_aruco_driver_node.py  eval_driver_node.py  gimbal_nadir_cmd.py  image_publisher_node.py  pos_estimator_node.py  run_detector.sh  verify_nested_tags.py  yolo_pose_estimator_node.py
otter_usv_detector/test_samples/: eval_aruco_results.yaml  eval_results.yaml  metadata.yaml
