<?xml version="1.0"?>
<package format="2">
  <name>dataset_acquisition</name>
  <version>0.1.0</version>
  <description>Dataset acquisition for YOLO OBB detection of the Otter USV from aerial imagery.</description>
  <maintainer email="nttputus@gmail.com">t-thanh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>gazebo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>otter_gazebo</depend>
  <depend>usv_worlds</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
</package>
